<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Advanced settings</string>
    <string name="category_storage">Storage</string>
    <string name="reboot_summary">Requires reboot to take affect</string>
    <string name="storage_switch_title">Use external storage</string>
    <string name="storage_switch_summary_off">Using expanded internal storage for apps and media</string>
    <string name="storage_switch_summary_on">Using SD Card for apps and media</string>
    <string name="storage_switch_unavailable">This device doesn\'t have expanded internal storage</string>
    <string name="category_telephony">GSM Telephony Options</string>
    <string name="gsm_signalstrength_title">Enable GSM Signal Strength Fix</string>
    <string name="gsm_signalstrength_summary_off">Using CDMA/LTE Signal Strength Indicator</string>
    <string name="gsm_signalstrength_summary_on">Using GSM Signal Strength Inidicator</string>
    <string name="gsm_signalstrength_unavailable">Disabled: This device is GSM only</string>
    <string name="reboot_prompt_title">Reboot required</string>
    <string name="reboot_prompt_message">In order to apply the changed configuration, a reboot is required.\n\nDo you want to reboot now?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
